crates/murphy-plugin-macros/tests/ui/fail_cop_investigation_with_node_param.stderr
error: #[on_new_investigation] methods must have 1 or 2 parameters after &self: cx: &Cx<'_>[, options: &Options] (no NodeId — file-level investigations reach data via cx.comments() etc.)
  --> tests/ui/fail_cop_investigation_with_node_param.rs:17:5
   |
17 |     fn check(&self, _node: NodeId, _cx: &Cx<'_>) {}
   |     ^^

warning: unused imports: `Cx` and `NodeId`
 --> tests/ui/fail_cop_investigation_with_node_param.rs:7:25
  |
7 | use murphy_plugin_api::{Cx, NodeId};
  |                         ^^  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
